--- a/TestVi/app/src/main/AndroidManifest.xml
+++ b/TestVi/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
     tools:ignore="UnusedAttribute"
         >
         <activity
-            android:name="ludeng.com.testvi.opentest.FirstActivity"
+            android:name="ludeng.com.testvi.login.LoginActivity"
             android:label="@string/app_name"
            >
             <intent-filter>
