Revert "鏇存敼鐧诲綍鏂瑰紡"
This reverts commit 91f5cce67fb23f189ccb236bfb4084e2fe880f7d.

--- a/TestVi/app/src/main/AndroidManifest.xml
+++ b/TestVi/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
     tools:ignore="UnusedAttribute"
         >
         <activity
-            android:name="ludeng.com.testvi.login.LoginActivity"
+            android:name="ludeng.com.testvi.opentest.FirstActivity"
             android:label="@string/app_name"
            >
             <intent-filter>
